--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,8 @@
-**
-
-!.gitignore
-!build.gradle
-!gradlew
-!gradlew.bat
-!README.md
-
-!src/**/**
-!gradle/**/**
+*.iml
+.gradle
+/local.properties
+.DS_Store
+/build
+/captures
+/.idea/
+/*/build/
